# hemolymph

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
frontend/: Cargo.toml  Makefile  index.html
frontend/src/: app.rs
frontend/src/app/: card_details.rs  components.rs
frontend/src/app/components/: card_details.rs  card_grid.rs  search_results.rs
server/: .gitignore  Cargo.toml  cards.json
server/src/: main.rs
