[package]
name = "hemolymph-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hemoglobin = { workspace = true }
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
yew = { workspace = true, features = ["csr", "hydration"] }
yew-router = "0.18.0"
futures = "0.3.30"
gloo-timers = "0.3.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlMetaElement",
    "EventTarget",
]
