[package]
name = "hemolymph-rs"
version = "0.1.3"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hemoglobin = { workspace = true }
hemolymph-frontend = { workspace = true }
actix-cors = "0.7.0"
actix-web = "4.7.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
actix-files = "0.6.6"
dotenv = "0.15.0"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
yew = { workspace = true, features = ["ssr"] }
